--- a/docs/css/03_component.css
+++ b/docs/css/03_component.css
@@ -6,6 +6,8 @@
     --filter-search-text-margin: var(--sp_px-s);
     --filter-search-width: 100%;
     --filter-search-width-2: clamp(240px, 60vw, 400px);
+    
+    --scrollbar-width: 15px;
 
 
 }
@@ -306,33 +308,31 @@ input:first-child:checked ~ .cp_dropdown_pop label input {
 }
 
 /*==================== scroll bar style =====================*/
- .cp_scrollbar::-webkit-scrollbar {
-        display: initial;
-        width: 4px;
-        height: 4px;
+    .cp_scrollbar::-webkit-scrollbar {
+        width: var(--scrollbar-width);
+        height: var(--scrollbar-width);
+
     }
     .cp_scrollbar::-webkit-scrollbar-track {
-        background-color: var(--sw-14);
-        background: transparent;
-/*        background: white;*/
+        background-color: transparent;
         border-radius: 99999px;
+
 }
-        .cp_scrollbar::-webkit-scrollbar-track-piece {
-/*    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+    .cp_scrollbar::-webkit-scrollbar-track-piece {
+
 }
-    .cp_scrollbar::-webkit-scrollbar-thumb {
-        background-color: var(--sw-6);
-        background-color: var(--nv-green);
-        border-radius: 99999px;
+    .cp_scrollbar::-webkit-scrollbar-thumb:vertical {
+/*        background-color: var(--nv-green);*/
+/*        border-radius: 99999px;*/
+        background: linear-gradient(to left, transparent 0px 6px, var(--nv-green) 6px 9px, transparent 9px 15px);
     }
-    .cp_scrollbar::-webkit-scrollbar:vertical {
-/*        display: none;*/
+    .cp_scrollbar::-webkit-scrollbar-thumb:horizontal {
+        background: linear-gradient(to bottom, transparent 0px 6px, var(--nv-green) 6px 9px, transparent 9px 15px);
     }
     .cp_scrollbar::-webkit-scrollbar-button {
-/*        display: none;*/
+        display: none;
     }
     .cp_scrollbar::-webkit-scrollbar-corner {
-/*        width: 40px;*/
-/*        display: none;*/
-/*        background-color: red;*/
     }
+    .cp_scrollbar::-webkit-resizer {  
+}
